--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,6 +62,7 @@ p strong{
   /*background-repeat: no-repeat;*/
   /*background-position-x:right;*/
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -87,6 +88,7 @@ p strong{
   margin-bottom: 15px;
   padding: 20px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -125,6 +127,7 @@ p strong{
   background-color: #ffe4e1;
   color: 	#6495ed;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   height: 86px;
 }
@@ -176,6 +179,7 @@ figure{
   background: #ffe4e1;
   color:#6495ed ;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   height: 30px;
@@ -231,6 +235,7 @@ figure{
   margin-bottom: 10px;
   height: 150px;
   display: flex;
+  flex-wrap: wrap;
   align-items:center;
   justify-content: space-between;
 }
@@ -276,8 +281,8 @@ figure{
   font-family: fantasy;
 }
 .container{
-  /*border: 1px solid red;*/
-  width: 1000px;
+  border: 1px solid red;
+  max-width: 1000px;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
