--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,8 +281,9 @@ figure{
   font-family: fantasy;
 }
 .container{
-  border: 1px solid red;
+  /* border: 1px solid red; */
   max-width: 1000px;
+  flex:1;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
