--- a/css/estilos.css
+++ b/css/estilos.css
@@ -198,8 +198,8 @@ figure{
 }
 .event{
   /*border: 3px solid #ffb6c1;*/
-  margin: 10px;
-  width: 480px;
+  margin: 1%;
+  width: 48%;
   flex-shrink: 0;
   border-radius: 10px;
   overflow: hidden;
@@ -208,7 +208,7 @@ figure{
 }
 
 .event img{
-  width: 480px;
+  width: 100%;
   height: 200px;
   object-fit: cover;
 }
