--- a/css/estilos.css
+++ b/css/estilos.css
@@ -311,8 +311,27 @@ figure{
 }
 
 .video1{
-  padding:20px;
+  /* padding:20px; */
   
+}
+
+.camarita{
+  width: 100%;
+  height: 0;
+  padding-top:56.25% ;
+  background: blue;
+  position: relative;
+}
+
+.youtube-video{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 
