--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,41 @@
+
 /*reglas
 selectores
 declaraciones
 propiedades
 valores*/
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?tjj1hc');
+  src:  url('../fonts/icomoon.eot?tjj1hc#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?tjj1hc') format('truetype'),
+    url('../fonts/icomoon.woff?tjj1hc') format('woff'),
+    url('../fonts/icomoon.svg?tjj1hc#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-menu:before {
+  content: "\e9bd";
+}
+
 body{
   background: pink;
   margin: 0;
@@ -144,6 +177,7 @@ p strong{
 .menu{
   height: inherit;
 }
+
 
 .header ol{
   display: flex;
@@ -331,7 +365,22 @@ figure{
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 0;
+}
+
+.burger-button{
+ width: 40px;
+ height: 40px;
+ border-radius: 50%;
+ background-color: rgb(100, 149, 237,.7);
+ display: none; 
+ line-height: 40px;
+ text-align: center;
+ position: fixed;
+ z-index: 4;
+ left: 5px;
+ top: 5px;
+ color: rgb(255, 184, 194);
 }
 
 
