--- a/css/media.css
+++ b/css/media.css
@@ -12,7 +12,7 @@
  
    .hero a img{
     position: absolute;
-    z-index: 1;
+    z-index: 0;
     left: 0;
     right: 0;
     top: 0;
@@ -33,9 +33,11 @@
      
 }
 
-@media screen and (max-width: 767px){  /* display de ipad */
+@media screen and (max-width: 768px){  /* display de ipad */
 
-
+.burger-button{
+    display: block;
+}
  .header{
   display: block;
   height: auto;
@@ -52,6 +54,30 @@
 
 .header a{
  justify-content: center;
+}
+
+.menu{
+ position: fixed;
+ background: rgba(255, 228, 225,.9);
+ z-index: 3;
+ top: 0;
+ left: -100vw;
+ width: 100vw;
+ /* height: 100vh; */
+ bottom: 0;
+ display: flex;
+ /* align-items: center; */
+ justify-content: center;
+ transition: .3s;
+}
+
+.menu a{
+    height: 200px;
+    font-size: 25px;;
+}
+
+.menu.is-active{
+ left: 0;
 }
 
 .project{
